# RustWorkshop

./: .gitignore  .rustlings-state.txt  Cargo.toml  README.md  info.toml  startscript.sh
exercises/01-Introduction/: intro02.rs  intro03.rs  intro04.rs
exercises/02-vecs/: vecs01.rs  vecs02.rs
exercises/03-strings/: strings01.rs  strings02.rs  strings03.rs
exercises/04-Ownership/: ownership01.rs  ownership02.rs  ownership03.rs  ownership04.rs  ownership05.rs
exercises/04-References/: refs01.rs  refs02.rs  refs03.rs  refs04.rs  refs05.rs
exercises/05-Options/: options01.rs  options02.rs  options03.rs
exercises/06-Results/: readme.md  results01.rs  results02.rs  results03.rs
exercises/06-Structures/: structures01.rs  structures02.rs
exercises/07-Enums/: enums01.rs  enums02.rs
exercises/08-Generics/: generics01.rs
exercises/09-Traits/: traits01.rs
exercises/10-Boxes/: boxes01.rs
exercises/11-Crates/: crates01.rs  crates02.rs
exercises/Functions/: functions.rs
exercises/Introduction/: intro01.rs  intro02.rs  intro03.rs  intro04.rs
solutions/: Solutions.md
