# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "intro01", path = "exercises/Introduction/intro01.rs" },
  { name = "intro02", path = "exercises/Introduction/intro02.rs" },
  { name = "intro03", path = "exercises/Introduction/intro03.rs" },
  { name = "intro04", path = "exercises/Introduction/intro04.rs" },
]

[package]
name = "exercises"
edition = "2024"
# Don't publish the exercises on crates.io!
publish = false

[dependencies]
