# Don't edit the `bin` list manually! It is updated by `rustlings dev update`
bin = [
  { name = "intro01", path = "exercises/01-Introduction/intro01.rs" },
  { name = "intro02", path = "exercises/01-Introduction/intro02.rs" },
  { name = "intro03", path = "exercises/01-Introduction/intro03.rs" },
  { name = "intro04", path = "exercises/01-Introduction/intro04.rs" },
  { name = "vecs01", path = "exercises/02-vecs/vecs01.rs" },
  { name = "vecs02", path = "exercises/02-vecs/vecs02.rs" },
  { name = "strings01", path = "exercises/03-strings/strings01.rs" },
  { name = "strings02", path = "exercises/03-strings/strings02.rs" },
  { name = "strings03", path = "exercises/03-strings/strings03.rs" },
  { name = "options01", path = "exercises/05-Options/options01.rs" },
  { name = "options02", path = "exercises/05-Options/options02.rs" },
  { name = "options03", path = "exercises/05-Options/options03.rs" },
  { name = "results01", path = "exercises/06-Results/results01.rs" },
  { name = "results02", path = "exercises/06-Results/results02.rs" },
  { name = "results03", path = "exercises/06-Results/results03.rs" },
  { name = "structures01", path = "exercises/06-Structures/structures01.rs" },
  { name = "structures02", path = "exercises/06-Structures/structures02.rs" },
  { name = "enums01", path = "exercises/07-Enums/enums01.rs" },
  { name = "crates01", path = "exercises/11-Crates/crates01.rs" },
  { name = "crates02", path = "exercises/11-Crates/crates02.rs" },
]

[package]
name = "exercises"
edition = "2024"
# Don't publish the exercises on crates.io!
publish = false



[lints.rust]
# You shouldn't write unsafe code in Rustlings!
unsafe_code = "forbid"
# You don't need unstable features in Rustlings and shouldn't rely on them while learning Rust.
unstable_features = "forbid"
# Dead code warnings can't be avoided in some exercises and might distract while learning.
dead_code = "allow"

[lints.clippy]
# This can only happen by mistake in Rustlings.
empty_loop = "forbid"
# No infinite loops are needed in Rustlings.
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
mem_forget = "deny"

[dependencies]
